[project]
name = "mini_lisp"
version = "0.1.0"
description = "A Mini-LISP interpreter implemented in Python with Lark."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Po Yen, Wu", email = "leo33917888@gmail.com"}
]
requires-python = "==3.9.*"

dependencies = [
    "lark-parser==0.12.0",
    "colorama==0.4.6"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
